# spimex-parser

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/: endpoints.py
app/migrations/: env.py
app/migrations/versions/: 517188ec1bd2_initial_revision.py  9ad9649de8f3_increased_some_fields_length.py  f9631f5ef14d_initial_revision.py
app/services/: downloader.py  parser.py  trading_service.py
app/tests/: results.md  test_downloader.py  test_endpoints.py  test_parser.py  test_trading_service.py
app/utils/: logger.py
