[project]
name = "spimex"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Longinov",email = "dl.ruled@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<=1.1.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "psutil (>=6.1.0,<7.0.0)",
    "xlwt (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
openpyxl = "^3.1.5"
httpx = "^0.28.1"

